<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tiamon</string>

    <!-- для Активностей -->
    <string name="title_activity_main">Main</string>
    <string name="title_activity_about">about Tiamon</string>
    <string name="title_activity_loading">Loading...</string>
    <string name="title_activity_newgame">New game</string>
    <string name="title_activity_records">Records</string>
    <string name="title_activity_shop">Shop</string>
    <string name="title_activity_settings">Settigns</string>

    <!-- Для постоянных -->
    <string name="label_menu">Menu</string>
    <string name="label_petsname">Pets Name</string>
    <string name="label_money">Catbucks</string>
    <string name="label_hangry">Hangry</string>
    <string name="label_sleep">Sleep</string>
    <string name="label_play">Happy</string>
    <string name="label_about">
        <b>Tiamon<i>V 1.0 Release</i></b>\n
        Developer : Dmitriy Zhilyaev\n
        Music : Alex Lazarev\n
        - I dont like\n
        - Sorry for bugs :)
    </string>

    <!-- Для кнопок и действий -->
    <string name="action_continue">Continue</string>
    <string name="action_settings">Settings</string>
    <string name="action_start_game">Start Game</string>

    <!-- Для тугл-кнопок -->
    <string name="toogle_sound_off">Sound off</string>
    <string name="toogle_sound_on">Sound on</string>

    <!-- Для событий информера -->
    <string name="event_lottery">You have win in lottery 777 catbucks!</string>
    <string name="event_mother">Mother present you 20 catbucks!</string>
    <string name="dummy_button"> </string>
    <string name="hello_world">Hello world!</string>
    <string name="settings_hard">Hard</string>
    <string name="settings_norm">Normal</string>
    <string name="settings_easy">Easy</string>
    <string name="settings_complexity">Complexity game</string>
    <string name="action_save">Save Record</string>
    <string name="toast_moneyistight">Money is tight</string>
    <string name="toast_need_bed">You Should buy the bed</string>
    <string name="toast_need_feed">You Should buy the food</string>
    <string name="toast_need_play">Going to shop!</string>
    <string name="toast_loose">You do not win in loterry</string>
    <string name="just_lulz">Loading just for fun</string>

</resources>
