<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="ru.diamon.tiamon.Settings">

    <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch_music" android:layout_gravity="center" android:checked="true"
            android:layout_below="@+id/textView18" android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp" android:textOff="@string/toogle_sound_off"
            android:textOn="@string/toogle_sound_on"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/action_settings"
            android:id="@+id/textView18" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" android:id="@+id/linearLayout7">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/settings_complexity"
                android:id="@+id/textView19" android:layout_gravity="center_horizontal" android:paddingBottom="20px"/>
        <RadioGroup
                android:layout_width="169dp"
                android:layout_height="fill_parent" android:layout_gravity="center_horizontal"
                android:showDividers="middle|beginning|end|none" android:orientation="vertical"
                android:id="@+id/group">
            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_easy"
                    android:id="@+id/radioButton1" android:checked="false"/>
            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_norm"
                    android:id="@+id/radioButton2" android:checked="false"/>
            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_hard"
                    android:id="@+id/radioButton3" android:checked="true"/>
        </RadioGroup>
    </LinearLayout>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/digview" android:layout_above="@+id/linearLayout7"
            android:layout_centerHorizontal="true" android:src="@drawable/shadow_lion"/>
</RelativeLayout>
