<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
              android:layout_height="match_parent" android:id="@+id/layout_main"
              android:weightSum="1" android:gravity="center" tools:context=".Main">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/label_menu"
                android:id="@+id/TitleMenu"
                android:layout_alignBottom="@+id/include" android:layout_centerHorizontal="true"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayout2" android:layout_centerVertical="true"
                android:layout_centerHorizontal="true">
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_continue"
                    android:id="@+id/menu_continue" android:layout_centerHorizontal="true"
                    android:width="@dimen/menu_btn_width" android:layout_centerVertical="true" android:height="@dimen/menu_btn_height"
                    android:maxWidth="@dimen/menu_btn_width" android:enabled="true"/>
            <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title_activity_newgame"
                    android:id="@+id/menu_newgame" android:width="@dimen/menu_btn_width"
                    android:height="@dimen/menu_btn_height" android:layout_below="@+id/menu_continue"
                    android:layout_centerHorizontal="true" android:onClick="NewGameActivity"/>
            <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title_activity_records"
                    android:id="@+id/menu_records" android:width="@dimen/menu_btn_width" android:height="@dimen/menu_btn_height"
                    android:layout_below="@+id/menu_newgame" android:layout_centerHorizontal="true"
                    android:onClick="RecordsActivity"/>
            <Button android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/title_activity_about"
                    android:id="@+id/menu_about" android:width="@dimen/menu_btn_width"
                    android:height="@dimen/menu_btn_height"
                    android:maxWidth="@dimen/menu_btn_width" android:enabled="true"
                    android:layout_below="@+id/linearLayout2" android:layout_centerHorizontal="true"
                    android:onClick="AboutActivity"/>
        </LinearLayout>
        <include android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 layout="@layout/sound"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentStart="true" android:id="@+id/include"/>
    </RelativeLayout>
</LinearLayout>
